--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/jest": "^23.3.13",
 		"@types/node": "^10.12.18",
 		"customize-cra": "^0.2.9",
+		"phaser": "^3.15.1",
 		"react-app-rewired": "^2.0.2",
 		"react-scripts": "2.1.1",
 		"typescript": "^3.2.4"
@@ -26,5 +27,7 @@
 		"not ie <= 11",
 		"not op_mini all"
 	],
-	"devDependencies": {}
+	"devDependencies": {
+		"phaser3-docs": "github:photonstorm/phaser3-docs"
+	}
 }
